--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,15 +30,15 @@ logging:
             sllproxy:
               config: debug
 
-server:
-  ssl:
+#server:
+#  ssl:
 #    key-store: classpath:keystore.jks
 #    key-store-password: ${key-store-password}
 #    key-alias: ${server}
 #    key-password: ${key-password}
 #    trust-store: classpath:truststore.jks
 #    trust-store-password: ${key-store-password}
-    client-auth: want
+#    client-auth: want
 
 ---
 
@@ -48,10 +48,11 @@ server:
   port: 8443
 zuul:
   sensitive-headers: Cookie,Set-Cookie
+  include-debug-header: true
   routes:
     homepage:
-    path: /**
-    url: https://www.frank-rahn.de/
+      path: /**
+      url: https://www.frank-rahn.de/
 
 ---
 
